--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,25 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background: white;
-  color: black;
-}
-
 body,
 h1,
 h2,
 p,
-ul,
-li,
 a {
   margin: 0px;
 }
 
 body {
-  font-family: 'Nunito', Arial, Helvetica, sans-serif;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   color: #222222;
-}
+  
+  }
 
 * {
   box-sizing: border-box;
@@ -34,7 +28,17 @@ a {
   text-decoration: none;
 }
 
-img {
-  display: block;
-  max-width: 100%;
+.teste {
+  display: -webkit-box;
+  width: 400px;
 }
+
+.carousel {
+  width: 0;
+}
+
+@media not all and (min-width: 640px) {
+  .carousel {
+    width: 270px;
+  }
+ }
