--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,15 +20,7 @@ body {
   box-sizing: border-box;
 }
 
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-.teste {
+.children {
   display: -webkit-box;
   width: 400px;
 }
